# CPP-2020-2021

./: README.md
Another2DVector/: Vector2D.cpp  Vector2D.h  main.cpp
AnotherMapPoint/: CMakeLists.txt  main.cpp
AnotherMapPoint/include/: MapDist.h  MapPoint.h
AnotherMapPoint/src/: MapDist.cpp  MapPoint.cpp
AnotherVectorWithStatics/: CMakeLists.txt  main.cpp
AnotherVectorWithStatics/include/: W.h
AnotherVectorWithStatics/src/: W.cpp
ArgumentsAndSum/: CMakeLists.txt  main.cpp
ArgumentsAndSum/include/: Argumenty.h  Pierwiastek.h  Suma.h
ArgumentsAndSum/src/: Argumenty.cpp
ArrayAndTemplates/: Array.h  CMakeLists.txt  X.h  main.cpp
BarberShopAndMakeUp/: Person.h  Persons.cpp  Persons.h  VectorQ.cpp  VectorQ.h  main.cpp
BedAndSofa/: Kanapa.h  Lozko.h  Mebel.h  Sofa.h  main.cpp
BooksAndBooksShelf/: CMakeLists.txt  main.cpp
BooksAndBooksShelf/include/: Book.h  BooksShelf.h
BooksAndBooksShelf/src/: Book.cpp  BooksShelf.cpp
CacheAndVerbosity/: MyCalculation.h  Policy.h  main.cpp
ComplexNumbers/: CMakeLists.txt  main.cpp
ComplexNumbers/include/: ComplexNumber.h
ComplexNumbers/src/: ComplexNumber.cpp
ConstructorsAndTraps/: CMakeLists.txt  main.cpp
ConstructorsAndTraps/include/: MyList.h  MyNode.h
ConstructorsAndTraps/src/: MyList.cpp  MyNode.cpp
CoordAndMapPoint/: Coordinates.cpp  Coordinates.h  MapPoint.cpp  MapPoint.h  main.cpp
CulturalQueue/: Person.h  QKolejka.h  main.cpp
DirsAndFiles/: Dir.cpp  Dir.h  File.cpp  File.h  main  main.cpp
DivisionAndExponentation/: CMakeLists.txt  main.cpp
DivisionAndExponentation/include/: Division.h  Exponentiation.h  Operation.h  SumOfElements.h
DivisionAndExponentation/src/: Division.cpp  Exponentiation.cpp  Operation.cpp  SumOfElements.cpp
DrawableShapes/: main.cpp  main.h  virtual.h
FirstOneWayList/: CMakeLists.txt  lab05.cpp  lab05.h  main.cpp
Fractions/: CMakeLists.txt  main.cpp
Fractions/include/: fraction.h
Fractions/src/: Vector.cpp  fraction.cpp
FunctionsAndDeratives/: CMakeLists.txt  main.cpp
FunctionsAndDeratives/include/: FElementarne.h  FZlozona.h  Fun.h  Op.h  Rozniczka.h  Trygonometryczne.h  main
Functors/: FilterCriteria.cpp  FilterCriteria.h  Functors.h  List.cpp  List.h  main.cpp  makefile
FunctorsAndSequences/: Algs.cpp  Algs.h  Argumenty.cpp  Argumenty.h  CMakeLists.txt  SekwencjaAlgorytmow.cpp  SekwencjaAlgorytmow.h  main.cpp
GoodShepherd/: CMakeLists.txt  Lab08  main.cpp  pasture.cpp  pasture.h
MapWithOwnOrder/: assoc.h  main.cpp
Observers/: CMakeLists.txt  Obserwator.cpp  Obserwator.h  Obserwowany.cpp  Obserwowany.h  main.cpp
OneMoreMapPoint/: CMakeLists.txt  main.cpp
OneMoreMapPoint/include/: MapDistance.h  MapPoint.h
OneMoreMapPoint/src/: MapDistance.cpp  MapPoint.cpp
Poems/: CMakeLists.txt  main.cpp
Poems/include/: MyLine.h  MyPoem.h
Poems/src/: MyLine.cpp  MyPoem.cpp
SheepsAndCows/: Animal.h  Animals.cpp  Animals.h  Meadow.cpp  Meadow.h  main.cpp  makefile
StudList/: CMakeLists.txt  main.cpp
StudList/include/: Element.h  studList.h
StudList/src/: Element.cpp  studList.cpp
Superheroes/: CMakeLists.txt  Member.h  Team.cpp  Team.h  main.cpp
TableOfExpenses/: Expense.cpp  Expense.h  Table.cpp  Table.h  main.cpp
TemplateOfTheList/: CMakeLists.txt  List.h  main.cpp
TotallyFirstMapPoint/: MapDist.cpp  MapDist.h  MapPoint.cpp  MapPoint.h  main.cpp
Vectors2D/: CMakeLists.txt  main.cpp
Vectors2D/include/: Vector2D.h
Vectors2D/src/: Vector2D.cpp
VectorsWithStatic/: CMakeLists.txt  main.cpp
VectorsWithStatic/include/: Vector.h
VirusAndDna/: CMakeLists.txt  animalvirus.cpp  animalvirus.h  dna.h  main.cpp  rna.cpp  rna.h  virus.cpp  virus.h
