cmake_minimum_required (VERSION 2.6)
project (Lab08)
include_directories(include src)
add_executable(Lab08 main.cpp)
set(LIBSRC include/FElementarne.h include/Fun.h include/FZlozona.h include/Op.h include/Rozniczka.h include/Trygonometryczne.h)
add_library(lab08 ${LIBSRC})
set_target_properties(lab08 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(Lab08 lab08)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}-DLIB_TEST -Wall")
